--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
+      name: 'IncredibleNote',
       loadSidebar: true,
       subMaxLevel: 3,
       search: {
