--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
+      name: '<b>Incredible Note</b>',
       loadSidebar: true,
       subMaxLevel: 3,
       search: {
         paths: 'auto',
-        placeholder: '搜索',
-        noData: '找不到结果',
+        placeholder: 'Search',
+        noData: 'No Results!',
       }
     }
   </script>
