--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '<b>Incredible Note</b>',
+      name: '<b><font size="1">Incredible Note</font></b>',
       loadSidebar: true,
       subMaxLevel: 3,
       search: {
