--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script>
     window.$docsify = {
       name: '<b>Incredible Note</b>',
+      loadSidebar: true,
+      subMaxLevel: 2,
       search: {
         paths: 'auto',
         placeholder: 'Search',
