--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/themes/vue.css" />
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/zaoyifan/Gallery@master/Icon/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/zaoyifan/Gallery@master/Icon/favicon.ico" type="image/x-icon"/>
 </head>
@@ -16,7 +16,7 @@
     window.$docsify = {
       name: '<b>Incredible Note</b>',
       loadSidebar: true,
-      subMaxLevel: 2,
+      subMaxLevel: 3,
       search: {
         paths: 'auto',
         placeholder: 'Search',
@@ -24,7 +24,7 @@
       }
     }
   </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+ <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
