--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"/>
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/zaoyifan/Gallery@master/Icon/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/zaoyifan/Gallery@master/Icon/favicon.ico" type="image/x-icon"/>
 </head>
@@ -26,5 +27,6 @@
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
 </body>
 </html>
